dmoz-0.1/textgarden/TextGardenLib/TextGardenLib.h


DLLExport int BowDocWgtBs_Search(
 int BowDocWgtBsId, int BowDocBsId, char* QueryStr);
DLLExport int BowDocPart_Load(int SInId);
DLLExport void BowDocPart_Save(int BowDocPartId, int SOutId);
DLLExport int BowDocPart_LoadFromFile(char* FNm);
DLLExport void BowDocPart_SaveToFile(int BowDocPartId, char* FNm);
DLLExport void BowDocPart_SaveStatToFile(int BowDocPartId, int BowDocBsId, char* FNm);
DLLExport void BowDocPart_Del(int BowDocPartId);
DLLExport int BowDocPart_GetKMeans(
 int BowDocBsId, int Clusts,
 int ClustTrials, double ConvergEps, int MnDocsPerClust,
 double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);
DLLExport int BowDocPart_GetHKMeans(
 int BowDocBsId, int MxDocsPerLeafClust,
 int ClustTrials, double ConvergEps, int MnDocsPerClust,
 double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);
DLLExport int BowDocPart_GetClusts(int BowDocPartId);
DLLExport int BowDocPart_GetDocs(int BowDocPartId, int ClustN);
DLLExport int BowDocPart_GetDId(int BowDocPartId, int ClustN, int DIdN);
DLLExport double BowDocPart_GetMeanSim(int BowDocPartId, int ClustN);
DLLExport double BowDocPart_GetDCSim(int BowDocPartId, int ClustN, int DId);
DLLExport int BowDocPart_GetConceptWords(int BowDocPartId, int ClustN);
DLLExport int BowDocPart_GetConceptWId(int BowDocPartId, int ClustN, int WIdN);
DLLExport double BowDocPart_GetConceptWWgt(int BowDocPartId, int ClustN, int WIdN);
DLLExport bool BowDocPart_IsSubPart(int BowDocPartId, int ClustN);
DLLExport int BowDocPart_GetSubPart(int BowDocPartId, int ClustN);
DLLExport int SemSpace_Load(int SInId);
DLLExport void SemSpace_Save(int SemSpaceId, int SOutId);
DLLExport int SemSpace_LoadFromFile(char* FNm);
DLLExport void SemSpace_SaveToFile(int SemSpaceId, char* FNm);
DLLExport void SemSpace_SaveStatToFile(int SemSpaceId, int BowDocBsId, char* FNm);
DLLExport void SemSpace_Del(int SemSpaceId);
DLLExport int SemSpace_GetDims(int SemSpaceId);
DLLExport int SemSpace_GetDim(int SemSpaceId, int BowDocBsId, int DimN);
DLLExport int SemSpace_GetLSI(int BowDocBsId, int SpaceDims);
DLLExport int SemSpace_GetLSIFromBowPart(int BowDocPartId, int SpaceDims);
DLLExport int SemSpace_GetPCA(int BowDocBsId);
DLLExport int BowMd_Load(int SInId);
DLLExport void BowMd_Save(int BowMdId, int SOutId);
DLLExport int BowMd_LoadFromFile(char* FNm, int BowDocBsId);
DLLExport void BowMd_SaveToFile(int BowMdId, char* FNm);
DLLExport void BowMd_Del(int BowMdId);
DLLExport bool BowMd_IsCat(int BowMdId);
DLLExport char* BowMd_GetCatNm(int BowMdId);
DLLExport bool BowMd_IsLinComb(int BowMdId);
DLLExport int BowMd_GetLinCombWgtWordPrV(int BowMdId, int BowDocBsId);
DLLExport double BowMd_GetLinCombTsh(int BowMdId);
DLLExport int BowMd_GetBinSVM(
 int BowDocBsId, int CId, double Cost=1, double CostWgt=1,
 double CutWordWgtSumPrc=0, int MnWordFq=0, int RndSeed=0, int MxDocs=-1);
DLLExport int BowMd_GetOneClassSVM(
 int BowDocBsId, int CId, double Nu=0.1,
 double CutWordWgtSumPrc=0, int MnWordFq=0, int RndSeed=0, int MxDocs=-1);
DLLExport int BowMd_GetWinnow(
 int BowDocBsId, int CId, double Beta=0.95,
 double CutWordWgtSumPrc=0, int MnWordFq=0, int RndSeed=0, int MxDocs=-1);
DLLExport double BowMd_GetCfyFromDocBs(int BowMdId, int BowDocBsId, int DId);
DLLExport double BowMd_GetCfyFromHtml(int BowMdId, int BowDocBsId, char* HtmlStr);
DLLExport int BowAL_New(int BowDocBsId, int CId, double Cost=1, double CostWgt=1);
DLLExport void BowAL_Del(int BowALId);
DLLExport int BowAL_GetCId(int BowALId);
DLLExport bool BowAL_IsQueryDIdV(int BowALId);
DLLExport int BowAL_GetQueries(int BowALId);
DLLExport double BowAL_GetQueryDist(int BowALId, int QueryN);
DLLExport int BowAL_GetQueryDId(int BowALId, int QueryN);
DLLExport void BowAL_MarkQueryDId(int BowALId, int QueryDId, bool AssignToCatP);
DLLExport void BowAL_MarkUnlabeledPosDocs(int BowALId);
DLLExport int RSet_Load(int SInId);
DLLExport void RSet_Save(int RSetId, int SOutId);
DLLExport int RSet_LoadFromFile(char* FNm);
DLLExport void RSet_SaveToFile(int RSetId, char* FNm);
DLLExport void RSet_SaveXmlToFile(int RSetId, char* FNm);
DLLExport void RSet_Del(int RSetId);
DLLExport char* RSet_GetUrlStr(int RSetId);
DLLExport char* RSet_GetNextUrlStr(int RSetId);
DLLExport char* RSet_GetQueryStr(int RSetId);
DLLExport int RSet_GetAllHits(int RSetId);
DLLExport int RSet_GetHits(int RSetId);
DLLExport int RSet_GetHitN(int RSetId, char* UrlStr, bool LcP);
DLLExport char* RSet_GetHitUrlStr(int RSetId, int HitN);
DLLExport char* RSet_GetHitTitleStr(int RSetId, int HitN);
DLLExport char* RSet_GetHitSrcNm(int RSetId, int HitN);
DLLExport char* RSet_GetHitCtxStr(int RSetId, int HitN);
DLLExport int Google_WebSearch(char* QueryStr, int MxHits=-1);
DLLExport int Google_NewsSearch(char* QueryStr, int MxHits=-1);
DLLExport int NmObjBs_Load(int SInId);
DLLExport void NmObjBs_Save(int NmObjBsId, int SOutId);
DLLExport int NmObjBs_LoadFromFile(char* FNm);
DLLExport void NmObjBs_SaveToFile(int NmObjBsId, char* FNm);
DLLExport void NmObjBs_SaveTxtToFile(int NmObjBsId,
 char* FqFNm, char* SwFNm, char* AbcFNm, char* DocFNm);
DLLExport void NmObjBs_Del(int NmObjBsId);
DLLExport int Conv_CpdToNmObjBs(
 int CpdSInId, char* SwSetTypeNm, char* CustSwSetFNm,
 char* NrWordBsFNm, char* WordTypeBsFNm, int MxDocs=-1);
DLLExport int Conv_CpdToNmObjBsFromFile(
 char* CpdFNm, char* SwSetTypeNm, char* CustSwSetFNm,
 char* NrWordBsFNm, char* WordTypeBsFNm, int MxDocs=-1);
DLLExport int Conv_NmObjBsToBow(int NmObjBsId, int MnNmObjFq=-1);
DLLExport int Url_Get(char* RelUrlStr, char* BaseUrlStr);
DLLExport void Url_Del(int UrlId);
DLLExport bool Url_IsOk(int UrlId, int Scheme=0);
DLLExport bool Url_IsOkHttp(int UrlId);
DLLExport int Url_GetScheme(int UrlId);
DLLExport char* Url_GetUrlStr(int UrlId);
DLLExport char* Url_GetRelUrlStr(int UrlId);
DLLExport bool Url_IsBaseUrl(int UrlId);
DLLExport char* Url_GetBaseUrlStr(int UrlId);
DLLExport char* Url_GetSchemeNm(int UrlId);