dmoz-0.1/textgarden/TextGardenLib/NetTextGardenLib.cs


         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_Search(int BowDocWgtBsId, int BowDocBsId, String QueryStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocPart_Save(int BowDocPartId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_LoadFromFile(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocPart_SaveToFile(int BowDocPartId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocPart_SaveStatToFile(int BowDocPartId, int BowDocBsId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocPart_Del(int BowDocPartId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetKMeans(int BowDocBsId, int Clusts, int ClustTrials, double ConvergEps, int MnDocsPerClust, double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetHKMeans(int BowDocBsId, int MxDocsPerLeafClust, int ClustTrials, double ConvergEps, int MnDocsPerClust, double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetClusts(int BowDocPartId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetDocs(int BowDocPartId, int ClustN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetDId(int BowDocPartId, int ClustN, int DIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowDocPart_GetMeanSim(int BowDocPartId, int ClustN);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowDocPart_GetDCSim(int BowDocPartId, int ClustN, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetConceptWords(int BowDocPartId, int ClustN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetConceptWId(int BowDocPartId, int ClustN, int WIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowDocPart_GetConceptWWgt(int BowDocPartId, int ClustN, int WIdN);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowDocPart_IsSubPart(int BowDocPartId, int ClustN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocPart_GetSubPart(int BowDocPartId, int ClustN);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void SemSpace_Save(int SemSpaceId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_LoadFromFile(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void SemSpace_SaveToFile(int SemSpaceId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void SemSpace_SaveStatToFile(int SemSpaceId, int BowDocBsId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void SemSpace_Del(int SemSpaceId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_GetDims(int SemSpaceId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_GetDim(int SemSpaceId, int BowDocBsId, int DimN);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_GetLSI(int BowDocBsId, int SpaceDims);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_GetLSIFromBowPart(int BowDocPartId, int SpaceDims);

         [DllImport("TextGardenLib.dll")]
         public static extern int SemSpace_GetPCA(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowMd_Save(int BowMdId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_LoadFromFile(String FNm, int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowMd_SaveToFile(int BowMdId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowMd_Del(int BowMdId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowMd_IsCat(int BowMdId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr BowMd_GetCatNm(int BowMdId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowMd_IsLinComb(int BowMdId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_GetLinCombWgtWordPrV(int BowMdId, int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowMd_GetLinCombTsh(int BowMdId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_GetBinSVM(int BowDocBsId, int CId, double Cost, double CostWgt, double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_GetOneClassSVM(int BowDocBsId, int CId, double Nu, double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowMd_GetWinnow(int BowDocBsId, int CId, double Beta, double CutWordWgtSumPrc, int MnWordFq, int RndSeed, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowMd_GetCfyFromDocBs(int BowMdId, int BowDocBsId, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowMd_GetCfyFromHtml(int BowMdId, int BowDocBsId, String HtmlStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowAL_New(int BowDocBsId, int CId, double Cost, double CostWgt);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowAL_Del(int BowALId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowAL_GetCId(int BowALId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowAL_IsQueryDIdV(int BowALId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowAL_GetQueries(int BowALId);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowAL_GetQueryDist(int BowALId, int QueryN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowAL_GetQueryDId(int BowALId, int QueryN);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowAL_MarkQueryDId(int BowALId, int QueryDId, bool AssignToCatP);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowAL_MarkUnlabeledPosDocs(int BowALId);

         [DllImport("TextGardenLib.dll")]
         public static extern int RSet_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void RSet_Save(int RSetId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int RSet_LoadFromFile(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void RSet_SaveToFile(int RSetId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void RSet_SaveXmlToFile(int RSetId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void RSet_Del(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetUrlStr(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetNextUrlStr(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetQueryStr(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern int RSet_GetAllHits(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern int RSet_GetHits(int RSetId);

         [DllImport("TextGardenLib.dll")]
         public static extern int RSet_GetHitN(int RSetId, String UrlStr, bool LcP);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetHitUrlStr(int RSetId, int HitN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetHitTitleStr(int RSetId, int HitN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetHitSrcNm(int RSetId, int HitN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr RSet_GetHitCtxStr(int RSetId, int HitN);

         [DllImport("TextGardenLib.dll")]
         public static extern int Google_WebSearch(String QueryStr, int MxHits);

         [DllImport("TextGardenLib.dll")]
         public static extern int Google_NewsSearch(String QueryStr, int MxHits);

         [DllImport("TextGardenLib.dll")]
         public static extern int NmObjBs_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void NmObjBs_Save(int NmObjBsId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int NmObjBs_LoadFromFile(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void NmObjBs_SaveToFile(int NmObjBsId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void NmObjBs_SaveTxtToFile(int NmObjBsId, String FqFNm, String SwFNm, String AbcFNm, String DocFNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void NmObjBs_Del(int NmObjBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int Conv_CpdToNmObjBs(int CpdSInId, String SwSetTypeNm, String CustSwSetFNm, String NrWordBsFNm, String WordTypeBsFNm, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int Conv_CpdToNmObjBsFromFile(String CpdFNm, String SwSetTypeNm, String CustSwSetFNm, String NrWordBsFNm, String WordTypeBsFNm, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         public static extern int Conv_NmObjBsToBow(int NmObjBsId, int MnNmObjFq);

         [DllImport("TextGardenLib.dll")]
         public static extern int Url_Get(String RelUrlStr, String BaseUrlStr);

         [DllImport("TextGardenLib.dll")]
         public static extern void Url_Del(int UrlId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Url_IsOk(int UrlId, int Scheme);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Url_IsOkHttp(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern int Url_GetScheme(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetUrlStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetRelUrlStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Url_IsBaseUrl(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetBaseUrlStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetSchemeNm(int UrlId);
